Allow legend text to wrap in older versions of Firefox. Fix #883

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ label { cursor: pointer; }
  * 2. Correct alignment displayed oddly in IE6/7
  */
 
-legend { border: 0; *margin-left: -7px; padding: 0; }
+legend { border: 0; *margin-left: -7px; padding: 0; white-space: normal; }
 
 /*
  * 1. Correct font-size not inheriting in all browsers
